# src/routes/v1/userDefs.ts
@@ -1,0 +1,7 @@
+export const PATH_ROUTE = {
+  PATH_GET: "/user",
+  PATH_AUTH: "/auth/signup",
+  PATH_LOGIN: "/auth/login",
+  PATH_GOOGLE: "/google",
+  PATH_GOOGLE_CALLBACK: "/google/callback"
+};
