# src/routes/v1/userPath.ts
@@ -1,3 +1,0 @@
-export const PATH_GET = "/user"
-export const PATH_AUTH = "/auth/signup" 
-export const PATH_LOGIN = "/auth/login" 
